--- a/src/orchid/resources/assets/css/extraCss.scss
+++ b/src/orchid/resources/assets/css/extraCss.scss
@@ -1,3 +1,33 @@
 a.logo {
     display: none;
 }
+
+.image.featured {
+    height: 45% !important;
+    width: 45%;
+}
+
+.border-test {
+    border: 4px solid blue;
+}
+
+.article-container {
+    width: 100%;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    line-height: 1px;
+}
+
+.spacing {letter-spacing: 1px !important;}
+
+.bullet-font.dib {
+    font-size: 18px;
+    font-style: none;
+    padding: none;
+}
+.dib {display: inline-block;}
+
+.li-font {
+    font-style: italic;
+}
