--- a/src/orchid/resources/assets/css/extraCss.scss
+++ b/src/orchid/resources/assets/css/extraCss.scss
@@ -17,7 +17,7 @@ h1, h2, h3, h4 {
     width: 100%;
     display:flex;
     flex-direction:column;
-    justify-content:center;
+    justify-content:space-evenly;
     // line-height: 1px;
 }
 
