--- a/src/orchid/resources/assets/css/extraCss.scss
+++ b/src/orchid/resources/assets/css/extraCss.scss
@@ -18,7 +18,7 @@ h1, h2, h3, h4 {
     display:flex;
     flex-direction:column;
     justify-content:space-evenly;
-    // line-height: 1px;
+    line-height: 26px;
 }
 
 .spacing {letter-spacing: 1px !important;}
