--- a/src/orchid/resources/assets/css/extraCss.scss
+++ b/src/orchid/resources/assets/css/extraCss.scss
@@ -17,8 +17,8 @@ h1, h2, h3, h4 {
     width: 100%;
     display:flex;
     flex-direction:column;
-    justify-content:space-evenly;
-    line-height: 26px;
+    justify-content:space-around;
+    line-height: 23px;
 }
 
 .spacing {letter-spacing: 1px !important;}
